--- a/02intro.asciidoc
+++ b/02intro.asciidoc
@@ -558,3 +558,12 @@ Next, you wrote a faucet contract in Solidity. You used the Remix IDE to compile
 It may not seem like much, but you've just successfully interacted with software that controls money on a decentralized world computer.
 
 We will do a lot more smart contract programming in <<smart_contracts_chapter>> and learn about best practices and security considerations in <<smart_contract_security>>.(((range="endofrange", startref="ix_02intro-asciidoc0")))
+
+
+[Chapter 7](https://github.com/ethereumbook/ethereumbook/blob/develop/07smart-contracts-solidity.asciidoc)
+
+[Chapter 7](./blob/develop/07smart-contracts-solidity.asciidoc)
+
+[Chapter 7](07smart-contracts-solidity.asciidoc)
+
+[Chapter 7](./07smart-contracts-solidity.asciidoc)
